--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ importFrom(flextable,align)
 importFrom(flextable,as_chunk)
 importFrom(flextable,as_paragraph)
 importFrom(flextable,border_remove)
+importFrom(flextable,colformat_double)
 importFrom(flextable,color)
 importFrom(flextable,compose)
 importFrom(flextable,font)
