--- a/NAMESPACE
+++ b/NAMESPACE
@@ -34,5 +34,6 @@ importFrom(rrtable,df2flextable)
 importFrom(stats,setNames)
 importFrom(tibble,column_to_rownames)
 importFrom(tibble,rownames_to_column)
+importFrom(tidyr,drop_na)
 importFrom(tidyr,pivot_longer)
 importFrom(tidyselect,all_of)
