--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: missy
-Title: What the Package Does (One Line, Title Case)
+Title: An R package for missing data and multiple imputation.
 Version: 0.0.0.9000
 Authors@R: 
     person(given = "Julianna",
