--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,7 +5,11 @@ export(ggplotProbe)
 export(mice_alpha)
 export(mice_cor)
 export(mice_df)
+export(tidy_lavaan_mi)
 importFrom(dplyr,"%>%")
+importFrom(dplyr,across)
+importFrom(dplyr,everything)
+importFrom(dplyr,filter)
 importFrom(dplyr,group_by)
 importFrom(dplyr,left_join)
 importFrom(dplyr,mutate)
@@ -41,6 +45,7 @@ importFrom(miceadds,micombine.cor)
 importFrom(officer,fp_border)
 importFrom(rrtable,df2flextable)
 importFrom(stats,setNames)
+importFrom(tibble,as_tibble)
 importFrom(tibble,column_to_rownames)
 importFrom(tibble,rownames_to_column)
 importFrom(tidyr,drop_na)
